--- a/Geometry_Invaders/Geometry_Invaders.runs/impl_1/usage_statistics_webtalk.html
+++ b/Geometry_Invaders/Geometry_Invaders.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2552052</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 22 16:53:21 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Nov 25 09:43:55 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2019.1 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>28e0942c6ac44de4bdebf6a67119e4cd</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>3</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>0c18d5953769568ca6db2ffdf0bdced7</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>0c18d5953769568ca6db2ffdf0bdced7</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -31,59 +31,62 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>basedialog_cancel=7</TD>
-   <TD>basedialog_ok=32</TD>
+<TR ALIGN='LEFT'>   <TD>basedialog_cancel=10</TD>
+   <TD>basedialog_ok=62</TD>
    <TD>basedialog_yes=2</TD>
    <TD>boardchooser_board_table=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>cmdmsgdialog_ok=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>createsrcfiledialog_file_name=2</TD>
-   <TD>filesetpanel_file_set_panel_tree=45</TD>
-</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=24</TD>
+   <TD>createsrcfiledialog_file_name=4</TD>
+   <TD>filesetpanel_file_set_panel_tree=99</TD>
+</TR><TR ALIGN='LEFT'>   <TD>flownavigatortreepanel_flow_navigator_tree=41</TD>
    <TD>gettingstartedview_create_new_project=1</TD>
    <TD>maintoolbarmgr_run=1</TD>
-   <TD>msgtreepanel_message_view_tree=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=1</TD>
-   <TD>pacommandnames_auto_connect_target=1</TD>
-   <TD>pacommandnames_auto_update_hier=2</TD>
-   <TD>pacommandnames_open_hardware_manager=2</TD>
+   <TD>msgtreepanel_message_view_tree=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_add_sources=2</TD>
+   <TD>pacommandnames_auto_connect_target=3</TD>
+   <TD>pacommandnames_auto_update_hier=5</TD>
+   <TD>pacommandnames_open_hardware_manager=4</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacommandnames_open_target_wizard=1</TD>
-   <TD>pacommandnames_run_bitgen=2</TD>
-   <TD>pacommandnames_set_as_top=1</TD>
+   <TD>pacommandnames_run_bitgen=5</TD>
+   <TD>pacommandnames_set_as_top=2</TD>
    <TD>pacommandnames_simulation_run_behavioral=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=1</TD>
-   <TD>programdebugtab_program_device=5</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_code=1</TD>
+   <TD>paviews_project_summary=3</TD>
+   <TD>programdebugtab_program_device=6</TD>
    <TD>programdebugtab_refresh_device=3</TD>
-   <TD>programfpgadialog_program=12</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_specify_bitstream_file=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_program=15</TD>
+   <TD>programfpgadialog_specify_bitstream_file=2</TD>
    <TD>projectnamechooser_choose_project_location=1</TD>
    <TD>projectnamechooser_project_name=1</TD>
-   <TD>srcchooserpanel_create_file=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=3</TD>
+   <TD>srcmenu_ip_hierarchy=7</TD>
+   <TD>taskbanner_close=2</TD>
    <TD>waveformnametree_waveform_name_tree=1</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=3</TD>
-   <TD>autoconnecttarget=1</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=4</TD>
+   <TD>autoconnecttarget=3</TD>
    <TD>launchopentarget=1</TD>
-   <TD>launchprogramfpga=11</TD>
+   <TD>launchprogramfpga=14</TD>
 </TR><TR ALIGN='LEFT'>   <TD>newproject=1</TD>
-   <TD>openhardwaremanager=10</TD>
-   <TD>openrecenttarget=4</TD>
-   <TD>programdevice=6</TD>
+   <TD>openhardwaremanager=16</TD>
+   <TD>openrecenttarget=9</TD>
+   <TD>programdevice=9</TD>
 </TR><TR ALIGN='LEFT'>   <TD>refreshdevice=3</TD>
-   <TD>runbitgen=5</TD>
-   <TD>runimplementation=5</TD>
-   <TD>runsynthesis=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>settopnode=1</TD>
-   <TD>showview=4</TD>
+   <TD>runbitgen=8</TD>
+   <TD>runimplementation=10</TD>
+   <TD>runsynthesis=10</TD>
+</TR><TR ALIGN='LEFT'>   <TD>settopnode=2</TD>
+   <TD>showview=7</TD>
    <TD>simulationrun=1</TD>
    <TD>viewtaskimplementation=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=1</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>guimode=3</TD>
+<TR ALIGN='LEFT'>   <TD>guimode=5</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>project_data</B></TD></TR>
@@ -107,9 +110,9 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=0</TD>
    <TD>simulator_language=VHDL</TD>
-   <TD>srcsetcount=4</TD>
+   <TD>srcsetcount=6</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
 </TR><TR ALIGN='LEFT'>   <TD>target_language=VHDL</TD>
    <TD>target_simulator=XSim</TD>
@@ -125,14 +128,14 @@
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
     <TD>carry4=84</TD>
     <TD>fdce=24</TD>
-    <TD>fdre=86</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdse=14</TD>
+    <TD>fdre=89</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=13</TD>
     <TD>gnd=2</TD>
     <TD>ibuf=2</TD>
-    <TD>lut1=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=252</TD>
-    <TD>lut3=19</TD>
-    <TD>lut4=46</TD>
+    <TD>lut1=9</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=249</TD>
+    <TD>lut3=15</TD>
+    <TD>lut4=52</TD>
     <TD>lut5=11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6=11</TD>
     <TD>obuf=14</TD>
@@ -145,14 +148,14 @@
 <TR ALIGN='LEFT'>    <TD>bufg=3</TD>
     <TD>carry4=84</TD>
     <TD>fdce=24</TD>
-    <TD>fdre=86</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdse=14</TD>
+    <TD>fdre=89</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdse=13</TD>
     <TD>gnd=2</TD>
     <TD>ibuf=2</TD>
-    <TD>lut1=8</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=252</TD>
-    <TD>lut3=19</TD>
-    <TD>lut4=46</TD>
+    <TD>lut1=9</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=249</TD>
+    <TD>lut3=15</TD>
+    <TD>lut4=52</TD>
     <TD>lut5=11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut6=11</TD>
     <TD>obuf=14</TD>
@@ -301,19 +304,19 @@
 </TR><TR ALIGN='LEFT'>    <TD>fdce_functional_category=Flop &amp; Latch</TD>
     <TD>fdce_used=24</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=89</TD>
+    <TD>fdre_used=99</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdse_functional_category=Flop &amp; Latch</TD>
-    <TD>fdse_used=14</TD>
+    <TD>fdse_used=13</TD>
     <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=8</TD>
+    <TD>lut1_used=9</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=252</TD>
+    <TD>lut2_used=249</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=19</TD>
+    <TD>lut3_used=15</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=46</TD>
+    <TD>lut4_used=52</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
     <TD>lut5_used=11</TD>
     <TD>lut6_functional_category=LUT</TD>
@@ -335,7 +338,7 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=248</TD>
+    <TD>lut_as_logic_used=250</TD>
     <TD>lut_as_logic_util_percentage=0.39</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -343,25 +346,25 @@
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=126800</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=127</TD>
-    <TD>register_as_flip_flop_util_percentage=0.10</TD>
+    <TD>register_as_flip_flop_used=136</TD>
+    <TD>register_as_flip_flop_util_percentage=0.11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=248</TD>
+    <TD>slice_luts_used=250</TD>
     <TD>slice_luts_util_percentage=0.39</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=127</TD>
-    <TD>slice_registers_util_percentage=0.10</TD>
+    <TD>slice_registers_used=136</TD>
+    <TD>slice_registers_util_percentage=0.11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=248</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=250</TD>
     <TD>lut_as_logic_util_percentage=0.39</TD>
     <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
@@ -370,35 +373,35 @@
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=4</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=1</TD>
-    <TD>register_driven_from_outside_the_slice_used=5</TD>
-    <TD>register_driven_from_within_the_slice_fixed=5</TD>
-    <TD>register_driven_from_within_the_slice_used=122</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=12</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=12</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
+    <TD>register_driven_from_outside_the_slice_used=12</TD>
+    <TD>register_driven_from_within_the_slice_fixed=12</TD>
+    <TD>register_driven_from_within_the_slice_used=124</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=127</TD>
-    <TD>slice_registers_util_percentage=0.10</TD>
-    <TD>slice_used=99</TD>
-    <TD>slice_util_percentage=0.62</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=136</TD>
+    <TD>slice_registers_util_percentage=0.11</TD>
+    <TD>slice_used=107</TD>
+    <TD>slice_util_percentage=0.68</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=63</TD>
+    <TD>slicel_used=79</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=36</TD>
+    <TD>slicem_used=28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=15850</TD>
     <TD>unique_control_sets_fixed=15850</TD>
-    <TD>unique_control_sets_used=11</TD>
-    <TD>unique_control_sets_util_percentage=0.07</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.07</TD>
-    <TD>using_o5_and_o6_used=99</TD>
-    <TD>using_o5_output_only_fixed=99</TD>
+    <TD>unique_control_sets_used=12</TD>
+    <TD>unique_control_sets_util_percentage=0.08</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.08</TD>
+    <TD>using_o5_and_o6_used=97</TD>
+    <TD>using_o5_output_only_fixed=97</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=149</TD>
+    <TD>using_o6_output_only_used=153</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -487,10 +490,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:29s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:27s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=610.539MB</TD>
-    <TD>memory_peak=904.801MB</TD>
+    <TD>memory_gain=617.539MB</TD>
+    <TD>memory_peak=911.707MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
